Use matrix to test java 8 and 17 with GH actions