@@ -1,5 +1,1 @@
 -Xmx8192m
---add-opens java.base/java.lang.reflect=ALL-UNNAMED
---add-opens java.base/java.util=ALL-UNNAMED
---add-opens java.base/java.text=ALL-UNNAMED
---add-opens java.desktop/java.awt.font=ALL-UNNAMED
